--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 
-# Переименуйте в .env и добавьте ваш ключ Gemini API
-# На Vercel добавьте эту переменную в настройках проекта (Settings -> Environment Variables)
-API_KEY=your_gemini_api_key_here
+# Gemini API Key (Required for image processing)
+# Get yours at https://aistudio.google.com/app/apikey
+API_KEY=your_api_key_here
