--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "description": "Professional AI Camera Angle Studio - Production Ready",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "^1.3.0",
@@ -16,11 +18,15 @@
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-react": "^4.3.2",
     "typescript": "^5.6.2",
     "vite": "^5.4.8"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
