feat: Enhance UI and Gemini service robustness
Introduces aesthetic improvements to the UI with custom scrollbars and updates the Gemini service to include API key validation and clearer error handling. This also refactors the `tsconfig.json` to emphasize strict mode for production quality.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
 
-    /* Strict Mode */
+    /* Strict Mode for Production Quality */
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
