refactor: Clean up project configuration
Removes unused settings and improves build configuration for better performance and maintainability. This includes updating the description in package.json, removing commented-out CSS, and optimizing Vite's chunk splitting.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
-
 {
   "name": "qwencam-studio",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "description": "Professional AI Camera Angle Studio - Production Ready",
+  "description": "Professional AI Camera Angle Studio",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
