--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -9,7 +8,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
 
-    /* Strict Mode for Production Quality */
+    /* Strict Mode */
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
